# entropy

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  ballistic_demo.cpp  ballistic_demo.hpp  dummy-demo.cpp
include/engine/: dummy.hpp  particle.hpp
src/: dummy.cpp  particle.cpp
test/: CMakeLists.txt  dummy-test.cpp  particle_test.cpp
